Fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -660,6 +660,10 @@ Certification
 	font-weight: 1;
 }
 
+.section-under-title {
+	padding-left: 1%;
+}
+
 /*
 Rewards
 */
@@ -708,7 +712,7 @@ Skills
 .skills {
 	background-color: var(--color-primary2);
 	position: relative;
-	padding: 50px 0 50px 0;
+	padding: 0px 0 50px 0;
 }
 
 .skills-section {
@@ -716,6 +720,10 @@ Skills
 	font-size: 16px;
 	line-height: 50px;
 	letter-spacing: 5px;
+}
+
+.skills-section h4 {
+	font-size: 20px;
 }
 
 
